--- a/resources/config.properties
+++ b/resources/config.properties
@@ -21,7 +21,7 @@ compress_terrain=false
 ##################################################
 
 # MAP
-map_location=maps/16x16/basesWorkers16x16.xml
+map_location=maps/8x8/basesWorkers8x8.xml
 
 #### GAME SETTINGS ###
 
@@ -30,7 +30,7 @@ max_cycles=5000
 
 # update interval, in milliseconds
 # ignored if headless == true
-update_interval=5
+update_interval=50
 
 # in headless mode, no window is drawn when running the game
 # the game also updates without intervals, which is much faster
@@ -54,5 +54,5 @@ conflict_policy=1
 # In STANDALONE mode, set which AIs to play
 # in CLIENT mode, AI1 will always be created via socket,
 # but AI2 wil be used as the AI that will play against AI1
-AI1=ai.abstraction.WorkerRush
+AI1=ai.abstraction.LLM_Gemini
 AI2=ai.RandomBiasedAI
