--- a/resources/config.properties
+++ b/resources/config.properties
@@ -54,5 +54,5 @@ conflict_policy=1
 # In STANDALONE mode, set which AIs to play
 # in CLIENT mode, AI1 will always be created via socket,
 # but AI2 wil be used as the AI that will play against AI1
-AI1=ai.abstraction.LLM_Gemini
+AI1=ai.abstraction.LLM_DeepseekR1
 AI2=ai.RandomBiasedAI
