--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,23 +2,29 @@ name: tests
 
 on:
   push:
-    branches: [ '*' ]
+    branches: ['*']
   pull_request:
-    branches: [ master ]
-    
+    branches: [master]
+
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 8 
-        uses: actions/setup-java@v1
+      - uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          java-version: '8.x' # The JDK version to make available on the path.
-          java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
-          architecture: x64 # (x64 or x86) - defaults to x64
+          distribution: temurin
+          java-version: '17'
+
+      # (Optional) Ensure Ant is present. Remove if your runner already has Ant.
+      - name: Install Ant
+        run: sudo apt-get update && sudo apt-get install -y ant
+
       - name: Build the JAR
         run: ant -noinput -buildfile build.xml export_jar
+
       - name: Run JUnit tests
         run: ant -noinput -buildfile build.xml test
