--- a/build.xml
+++ b/build.xml
@@ -19,6 +19,7 @@
         <pathelement location="lib/weka.jar"/>
     	<pathelement location="lib/hamcrest-all-1.3.jar"/>
         <pathelement location="lib/junit-4.12.jar"/>
+		<pathelement location="lib/gson-2.10.1.jar"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
